--- a/SARIMA_ver0_8_LITE.ipynb
+++ b/SARIMA_ver0_8_LITE.ipynb
@@ -14,14 +14,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
     "with open('data/output/Matome.csv', 'a+',encoding='shift_jis',newline=\"\") as f:\n",
     "    writer = csv.writer(f)\n",
-    "    writer.writerow([\"局\",\"曜日\",\"時刻\",\"レギュラー番組名\",\"RMSE誤差\",\"MAPE誤差率\",\"SARIMAモデルのパラメータ\",\"OUTPUTファイル名\"])"
+    "    writer.writerow([\"局\",\"曜日\",\"時刻\",\"レギュラー番組名\",\"RMSE誤差\",\"MAPE誤差率\",\"SARIMAモデルのパラメータ\",\n",
+    "                     \"期間内レギュラー番組放送率\",\"予測に使うデータのレギュラー番組率\",\"OUTPUTファイル名\"])"
    ]
   },
   {
@@ -957,21 +958,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:14: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  \n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1697,7 +1686,7 @@
        "[157 rows x 6 columns]"
       ]
      },
-     "execution_count": 325,
+     "execution_count": 342,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1710,10 +1699,12 @@
     "import numpy as np\n",
     "\n",
     "ftv_na=[]\n",
+    "Regular=0\n",
     "\n",
     "for index,row in ts_loc.iterrows():\n",
     "    if bangumi_name in row[\"メインタイトル\"]:\n",
     "        ftv_na.append(row[\"視聴率（世帯）\"])\n",
+    "        Regular+=1\n",
     "    else:\n",
     "        ftv_na.append(np.nan)\n",
     "ts_loc[\"視聴率（修正）\"]=ftv_na\n",
@@ -2474,6 +2465,27 @@
     "#予測に利用する時系列データ（tsデータ）を作成\n",
     "ts=ts_loc_2[\"視聴率（修正）\"]\n",
     "ts_loc_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 354,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "レギュラー番組率1（レギュラー番組数/データセットの週数）： 0.739\n",
+      "レギュラー番組率2（レギュラー番組数/実際に予測に使う番組数）： 0.744\n"
+     ]
+    }
+   ],
+   "source": [
+    "RegularRate1=round(Regular/len(ts_loc),3)\n",
+    "RegularRate2=round(Regular/len(ts_loc_2),3)\n",
+    "print(\"レギュラー番組率1（レギュラー番組数/データセットの週数）：\",RegularRate1)\n",
+    "print(\"レギュラー番組率2（レギュラー番組数/実際に予測に使う番組数）：\",RegularRate2)"
    ]
   },
   {
@@ -3787,7 +3799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 356,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3796,7 +3808,7 @@
     "a\n",
     "with open('data/output/Matome.csv', 'a+',encoding='shift_jis',newline=\"\") as f:\n",
     "    writer = csv.writer(f)\n",
-    "    writer.writerow([select_TV,select_Week,select_Time,bangumi_name,rmse,mape,modelname,filename])"
+    "    writer.writerow([select_TV,select_Week,select_Time,bangumi_name,rmse,mape,modelname,RegularRate1,RegularRate2,filename])"
    ]
   },
   {
