--- a/SARIMA_ver0_8_LITE.ipynb
+++ b/SARIMA_ver0_8_LITE.ipynb
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 362,
    "metadata": {
     "scrolled": true
    },
@@ -900,7 +900,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
+       "      <th>期間内放送回数</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -929,15 +929,15 @@
        "</div>"
       ],
       "text/plain": [
-       "                                 0\n",
-       "ネプリーグ　　　　　　　　　　　　　　　　　　　　　　　　　  85\n",
-       "ＦＮＳ番組対抗オールスター春の祭典目利き王決定戦　　　　　　   2\n",
-       "ＦＩＶＢワールドカップバレーボール２０１９女子　　　　　　　   2\n",
-       "新春スカッとジャパン内村もドラマに登場！３時間半ＳＰ　　　　   1\n",
-       "ネプリーグＳＰ・林先生が全問出題！インテリ芸能人常識ランキン   1"
+       "                                期間内放送回数\n",
+       "ネプリーグ　　　　　　　　　　　　　　　　　　　　　　　　　       85\n",
+       "ＦＮＳ番組対抗オールスター春の祭典目利き王決定戦　　　　　　        2\n",
+       "ＦＩＶＢワールドカップバレーボール２０１９女子　　　　　　　        2\n",
+       "新春スカッとジャパン内村もドラマに登場！３時間半ＳＰ　　　　        1\n",
+       "ネプリーグＳＰ・林先生が全問出題！インテリ芸能人常識ランキン        1"
       ]
      },
-     "execution_count": 324,
+     "execution_count": 362,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -947,13 +947,14 @@
     "import collections\n",
     "c=collections.Counter(ftv_title)\n",
     "dc={}\n",
-    "for k,v in c.most_common(5):   # 一度pd.Seriesに変換\n",
+    "for k,v in c.most_common(100):   # 一度pd.Seriesに変換\n",
     "    dc[k]=v\n",
     "\n",
-    "rbg=pd.DataFrame(pd.Series(dc))\n",
+    "rbg=pd.DataFrame(pd.Series(dc),columns=[\"期間内放送回数\"])\n",
     "bangumi_name=rbg.index[0].replace(\"\\u3000\",\"\")\n",
+    "rbg.to_csv('data/output/'+SaveFileName+\"_\"+\"同時刻放送番組一覧\"+'.csv',encoding='cp932', index=True, header=False)\n",
     "print(bangumi_name)\n",
-    "rbg"
+    "rbg.head(5)"
    ]
   },
   {
