--- a/SARIMA_ver0_8_LITE.ipynb
+++ b/SARIMA_ver0_8_LITE.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 366,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
     "select_Week=\"月\"\n",
     "select_Time=\"19:10:00\"\n",
     "Time_split=select_Time.split(\":\")\n",
-    "SaveFileName=select_TV+\"_\"+select_Week+select_Time2[0]+select_Time2[1]"
+    "SaveFileName=select_TV+\"_\"+select_Week+Time_split[0]+Time_split[1]"
    ]
   },
   {
