--- a/LSTM_model/LSTM_v2_おまけ_株価予測.ipynb
+++ b/LSTM_model/LSTM_v2_おまけ_株価予測.ipynb
@@ -63,7 +63,7 @@
     "mpl.rcParams['axes.unicode_minus']=False\n",
     "\n",
     "#设置token\n",
-    "token='cef0fb17299560b63a0e70935c294b1b248e6fa2e72cb3d33f56b6d5'\n",
+    "token='*******************'\n",
     "#ts.set_token(token)\n",
     "pro = ts.pro_api(token)"
    ]
