--- a/LSTM_model/LSTM_v2_おまけ_株価予測.ipynb
+++ b/LSTM_model/LSTM_v2_おまけ_株価予測.ipynb
@@ -6,7 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#用sequence to sequence方法生成模型\n",
+    "#Python获取股票数据和可视化\n",
+    "#https://zhuanlan.zhihu.com/p/54299970\n",
+    "\n",
+    "#利用深度学习和机器学习预测股票市场\n",
+    "#https://www.jiqizhixin.com/articles/2019-01-04-16\n",
+    "\n",
+    "#用 LSTM 做时间序列预测的一个小例子\n",
+    "#https://cloud.tencent.com/developer/article/1083338\n",
+    "\n",
+    "#sequence to vector的LSTM方法预测\n",
     "#https://blog.csdn.net/hzy459176895/article/details/90512104"
    ]
   },
@@ -56,14 +65,13 @@
    "outputs": [],
    "source": [
     "import tushare as ts\n",
-    "#https://zhuanlan.zhihu.com/p/54299970\n",
     "\n",
     "from pylab import mpl\n",
     "mpl.rcParams['font.sans-serif']=['SimHei']\n",
     "mpl.rcParams['axes.unicode_minus']=False\n",
     "\n",
     "#设置token\n",
-    "token='*******************'\n",
+    "token='cef0fb17299560b63a0e70935c294b1b248e6fa2e72cb3d33f56b6d5'\n",
     "#ts.set_token(token)\n",
     "pro = ts.pro_api(token)"
    ]
